--- a/session-4-frontend-css-layout/index.html
+++ b/session-4-frontend-css-layout/index.html
@@ -14,7 +14,7 @@
 		<img class="down" src="https://cdn2.iconfinder.com/data/icons/halloween-avatar/260/halloween_avatar-25-512.png">
 	</div>
 	<div class="ghost-container">
-		<h1>ghost dance party</h1>
+		<h1>dance dance dance</h1>
 		<img class="down" src="https://cdn2.iconfinder.com/data/icons/halloween-avatar/260/halloween_avatar-25-512.png">
 		<img class="up" src="https://cdn2.iconfinder.com/data/icons/halloween-avatar/260/halloween_avatar-25-512.png">
 		<img class="down" src="https://cdn2.iconfinder.com/data/icons/halloween-avatar/260/halloween_avatar-25-512.png">
