--- a/session-1-intro-to-frontend/demo/index.html
+++ b/session-1-intro-to-frontend/demo/index.html
@@ -1,20 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Page Title</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+	<title>Landing page</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
+	<link href="https://fonts.googleapis.com/css?family=Beth+Ellen&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1 class="header"> HELLO WORLD </h1>    
-    <img src="https://i.ytimg.com/vi/ZHgtIyZX_q8/maxresdefault.jpg">
-    <p id="my-paragraph">I am a paragraph</p>
-    <ol>
-        <li>First ordered list item</li>
-        <li id="last">Second ordered list item</li>
-    </ol>
-    <button>Click Me</button>
-    <a href="http://acm.cs.ucla.edu/">ACM Website!</a>
-    <input types="text" placeholder="input stuff here">
-    <script src="script.js"></script>
+	<h1>Hello World</h1>
+	<h1 class="noot">Noot</h1>
+	<h1 class="noot">Noot noot</h1>
+	<h1 id="last" class="noot">Noot noot noot</h1>
+	<script src="script.js"></script>
 </body>
 </html>
