--- a/session-1-intro-to-frontend/demo/index.html
+++ b/session-1-intro-to-frontend/demo/index.html
@@ -10,6 +10,7 @@
 	<h1 class="noot">Noot</h1>
 	<h1 class="noot">Noot noot</h1>
 	<h1 id="last" class="noot">Noot noot noot</h1>
+	<img src="https://i.ytimg.com/vi/ZHgtIyZX_q8/maxresdefault.jpg" height="300px">
 	<script src="script.js"></script>
 </body>
 </html>
